unpackaged/main/default/objects/Subscription_NEW__c/Subscription_NEW__c.object-meta.xml
<CustomObject>
    <label>Subscription (NEW)</label>
    <nameField>
        <displayFormat>Sub-{0000000}</displayFormat>
        <label>Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions (NEW)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>