unpackaged/main/default/objects/Subscription_NEW__c/fields/Account_Fuzzy_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Fuzzy_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Fuzzy Match)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions (NEW) (Account (Fuzzy Match))</relationshipLabel>
    <relationshipName>Subscriptions_NEW1</relationshipName>
    <type>Lookup</type>
</CustomField>