unpackaged/main/default/objects/Subscription_NEW__c/fields/Case_Safe_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription ID (Long)</label>
    <type>Text</type>
</CustomField>