unpackaged/main/default/objects/Subscription_NEW__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions (NEW)</relationshipLabel>
    <relationshipName>Subscriptions_NEW</relationshipName>
    <type>Lookup</type>
</CustomField>