unpackaged/main/default/objects/Subscription_NEW__c/fields/Days_Created_before_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Created_before_Expiry__c</fullName>
    <formula>Expiration_Date__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Created before Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>