unpackaged/main/default/objects/Subscription_NEW__c/fields/Expiration_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_2__c</fullName>
    <formula>Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date 2</label>
    <type>Date</type>
</CustomField>