unpackaged/main/default/objects/Subscription_NEW__c/fields/Maximum_Users__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Users__c</fullName>
    <label>Maximum Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>