unpackaged/main/default/objects/Subscription_NEW__c/fields/Minimum_Users__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Users__c</fullName>
    <label>Minimum Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>