unpackaged/main/default/objects/Subscription_NEW__c/fields/Recapture_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Recapture_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this Subscription does not renew, a recapture Opportunity is created 30 days after it expires.</inlineHelpText>
    <label>Recapture Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subscriptions (NEW) (Recapture Opportunity)</relationshipLabel>
    <relationshipName>Subscriptions_New1</relationshipName>
    <type>Lookup</type>
</CustomField>