unpackaged/main/default/objects/Subscription_NEW__c/fields/Recaptured__c.field-meta.xml
<CustomField>
    <fullName>Recaptured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recaptured</label>
    <type>Checkbox</type>
</CustomField>