unpackaged/main/default/objects/Subscription_NEW__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A renewal Opportunity is created 90 days before this subscription expires. If upgraded mid-term via the button above, the upgrade Opportunity created is referenced here.</inlineHelpText>
    <label>Renewal/Upgrade Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subscriptions (NEW)</relationshipLabel>
    <relationshipName>Subscriptions_NEW</relationshipName>
    <type>Lookup</type>
</CustomField>