unpackaged/main/default/objects/Subscription_NEW__c/fields/Renewal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Stage__c</fullName>
    <formula>TEXT(Renewal_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Stage</label>
    <type>Text</type>
</CustomField>