unpackaged/main/default/objects/Subscription_NEW__c/fields/Renewed__c.field-meta.xml
<CustomField>
    <fullName>Renewed__c</fullName>
    <formula>IF(ISPICKVAL(Status_old__c, "RENEWED") || Renewal_Status__c = "Renewal Agreed" || Renewal_Status__c = "Upgraded Mid-Term", 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>