unpackaged/main/default/objects/Subscription_NEW__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Start_Date__c &gt; TODAY(),"Pending",
IF((Start_Date__c &lt;= TODAY() &amp;&amp;  Expiration_Date__c  &gt;= TODAY())||(ISBLANK(Start_Date__c) &amp;&amp; Expiration_Date__c  &gt;= TODAY()) ,"Active",
IF(Expiration_Date__c &lt;TODAY(), "Expired",null
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>