unpackaged/main/default/objects/Subscription_NEW__c/fields/Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Status_Details__c</fullName>
    <label>Status Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>