unpackaged/main/default/objects/Subscription_NEW__c/fields/Status_old__c.field-meta.xml
<CustomField>
    <fullName>Status_old__c</fullName>
    <label>Status(old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>