unpackaged/main/default/objects/Subscription_NEW__c/fields/Upgraded__c.field-meta.xml
<CustomField>
    <fullName>Upgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upgraded</label>
    <type>Checkbox</type>
</CustomField>