unpackaged/main/default/objects/Subscription_NEW__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <label>Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>