unpackaged/main/default/objects/Subscription_NEW__c/validationRules/recapture_rule_30_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>recapture_rule_30_Days</fullName>
    <active>false</active>
    <errorConditionFormula>TODAY() &lt; ( Expiration_Date__c  + 30) &amp;&amp; Recaptured__c = TRUE</errorConditionFormula>
    <errorDisplayField>Recaptured__c</errorDisplayField>
    <errorMessage>Subscriptions are classified as recaptured when Expiration Date was more than 30 days ago.</errorMessage>
</ValidationRule>